--- a/FribergCarRentals/FribergCarRentals.csproj
+++ b/FribergCarRentals/FribergCarRentals.csproj
@@ -7,22 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Views\User\**" />
-    <Content Remove="Views\User\**" />
-    <EmbeddedResource Remove="Views\User\**" />
-    <None Remove="Views\User\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Controllers\UserController.cs" />
     <Compile Remove="Data\IUserRepository.cs" />
     <Compile Remove="Data\UserRepository.cs" />
     <Compile Remove="Migrations\xApplicationDbContextModelSnapshot.cs" />
+    <Compile Remove="ViewModels\CarViewModel.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
@@ -34,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
